feat: add doc about defaults Spring Boot naming strategies and log about how to configure the Quarkus properties to use them

--- a/extensions/spring-boot-properties/runtime/pom.xml
+++ b/extensions/spring-boot-properties/runtime/pom.xml
@@ -16,7 +16,7 @@
     <dependencies>
         <dependency>
             <groupId>io.quarkus</groupId>
-            <artifactId>quarkus-spring-boot-api</artifactId>
+            <artifactId>quarkus-spring-boot-properties-api</artifactId>
         </dependency>
         <dependency>
             <groupId>io.quarkus</groupId>
