--- a/bom/runtime/pom.xml
+++ b/bom/runtime/pom.xml
@@ -119,8 +119,8 @@
         <testng.version>6.14.2</testng.version>
         <assertj.version>3.15.0</assertj.version>
         <json-smart.version>2.3</json-smart.version>
-        <infinispan.version>10.1.2.Final</infinispan.version>
-        <infinispan.protostream.version>4.3.1.Final</infinispan.protostream.version>
+        <infinispan.version>10.1.5.Final</infinispan.version>
+        <infinispan.protostream.version>4.3.2.Final</infinispan.protostream.version>
         <caffeine.version>2.8.0</caffeine.version>
         <netty.version>4.1.45.Final</netty.version>
         <reactive-streams.version>1.0.3</reactive-streams.version>
@@ -2505,6 +2505,11 @@
             <dependency>
                 <groupId>org.infinispan</groupId>
                 <artifactId>infinispan-remote-query-server</artifactId>
+                <version>${infinispan.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>org.infinispan</groupId>
+                <artifactId>infinispan-commons-test</artifactId>
                 <version>${infinispan.version}</version>
             </dependency>
             <dependency>
