Add quarkus-test-amazon-lambda to BOM, and remove redundant quarkus version in archetype

--- a/bom/runtime/pom.xml
+++ b/bom/runtime/pom.xml
@@ -909,6 +909,11 @@
             </dependency>
             <dependency>
                 <groupId>io.quarkus</groupId>
+                <artifactId>quarkus-test-amazon-lambda</artifactId>
+                <version>${project.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>io.quarkus</groupId>
                 <artifactId>quarkus-qute</artifactId>
                 <version>${project.version}</version>
             </dependency>
