--- a/extensions/infinispan-embedded/deployment/pom.xml
+++ b/extensions/infinispan-embedded/deployment/pom.xml
@@ -27,6 +27,10 @@
         </dependency>
         <dependency>
             <groupId>io.quarkus</groupId>
+            <artifactId>quarkus-smallrye-metrics-deployment</artifactId>
+        </dependency>
+        <dependency>
+            <groupId>io.quarkus</groupId>
             <artifactId>quarkus-infinispan-embedded</artifactId>
         </dependency>
     </dependencies>
