--- a/bom/deployment/pom.xml
+++ b/bom/deployment/pom.xml
@@ -498,6 +498,11 @@
             </dependency>
             <dependency>
                 <groupId>io.quarkus</groupId>
+                <artifactId>quarkus-amazon-alexa-deployment</artifactId>
+                <version>${project.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>io.quarkus</groupId>
                 <artifactId>quarkus-amazon-lambda-xray-deployment</artifactId>
                 <version>${project.version}</version>
             </dependency>
