Liquibase - Enable the reports in the native image generation

--- a/integration-tests/liquibase/pom.xml
+++ b/integration-tests/liquibase/pom.xml
@@ -121,6 +121,7 @@
                                     <enableHttpUrlHandler>true</enableHttpUrlHandler>
                                     <graalvmHome>${graalvmHome}</graalvmHome>
                                     <debugBuildProcess>false</debugBuildProcess>
+                                    <enableReports>true</enableReports>
                                 </configuration>
                             </execution>
                         </executions>
