--- a/extensions/arango/pom.xml
+++ b/extensions/arango/pom.xml
@@ -11,7 +11,7 @@
     </parent>
     <modelVersion>4.0.0</modelVersion>
 
-    <artifactId>quarkus-arango-db-parent</artifactId>
+    <artifactId>quarkus-arango-parent</artifactId>
     <name>Quarkus - ArangoDB</name>
     <packaging>pom</packaging>
     <modules>
