--- a/extensions/arango/pom.xml
+++ b/extensions/arango/pom.xml
@@ -12,7 +12,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>quarkus-arango-parent</artifactId>
-    <name>Quarkus - ArangoDB</name>
+    <name>Quarkus - Arango</name>
     <packaging>pom</packaging>
     <modules>
         <module>deployment</module>
