--- a/integration-tests/flyway/src/main/resources/application.properties
+++ b/integration-tests/flyway/src/main/resources/application.properties
@@ -5,8 +5,9 @@ quarkus.log.category."io.quarkus.flyway".level=DEBUG
 quarkus.datasource.db-kind=h2
 quarkus.datasource.username=sa
 quarkus.datasource.password=sa
+
+# default flyway configuration properties
 quarkus.datasource.jdbc.url=jdbc:h2:tcp://localhost/mem:test_quarkus;DB_CLOSE_DELAY=-1
-# Flyway config properties
 quarkus.flyway.connect-retries=10
 quarkus.flyway.schemas=TEST_SCHEMA
 quarkus.flyway.table=flyway_quarkus_history
@@ -16,3 +17,13 @@ quarkus.flyway.migrate-at-start=true
 quarkus.flyway.placeholders.foo=bar
 
 quarkus.hibernate-orm.database.generation=validate
+
+# second Agroal config
+quarkus.datasource.second-datasource.db-kind=h2
+quarkus.datasource.second-datasource.jdbc.url=jdbc:h2:tcp://localhost/mem:test_multiple_flyway_datasource;DB_CLOSE_DELAY=-1
+
+# configuration to test multiple flyway datasources
+quarkus.flyway.second-datasource.locations=db/location3
+quarkus.flyway.second-datasource.sql-migration-prefix=V
+quarkus.flyway.second-datasource.migrate-at-start=true
+quarkus.flyway.second-datasource.placeholders.mambo=poa
