--- a/.dependabot/config.yml
+++ b/.dependabot/config.yml
@@ -130,3 +130,8 @@ update_configs:
           dependency_name: "org.jboss:jandex"
       - match:
           dependency_name: "org.jboss.jandex:jandex-maven-plugin"
+  - package_manager: "java:gradle"
+    directory: "/devtools/gradle"
+    update_schedule: "daily"
+    default_labels:
+      - "area/dependencies"
