--- a/extensions/rest-client/pom.xml
+++ b/extensions/rest-client/pom.xml
@@ -11,7 +11,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>quarkus-rest-client-parent</artifactId>
-    <name>Quarkus - REST client</name>
+    <name>Quarkus - REST Client</name>
     <packaging>pom</packaging>
     <modules>
         <module>deployment</module>
