--- a/extensions/rest-client/runtime/pom.xml
+++ b/extensions/rest-client/runtime/pom.xml
@@ -11,7 +11,7 @@
     <modelVersion>4.0.0</modelVersion>
 
     <artifactId>quarkus-rest-client</artifactId>
-    <name>Quarkus - REST client - Runtime</name>
+    <name>Quarkus - REST Client - Runtime</name>
     <description>Call REST services</description>
 
     <dependencies>
