--- a/build-parent/pom.xml
+++ b/build-parent/pom.xml
@@ -78,9 +78,8 @@
         <wagon-provider-api.version>3.3.3</wagon-provider-api.version>
 
         <!-- The image to use for tests that run Keycloak -->
-        <!-- IMPORTANT: If this is changed you must also update
-             native-build-steps.yaml, jvm-build-steps.yaml and .github/workflows/ci-actions.yml to match the version -->
-        <keycloak.docker.image>quay.io/keycloak/keycloak:9.0.0</keycloak.docker.image>
+        <!-- IMPORTANT: If this is changed you must also update .github/workflows/ci-actions.yml to match the version -->
+        <keycloak.docker.image>quay.io/keycloak/keycloak:9.0.2</keycloak.docker.image>
 
         <unboundid-ldap.version>4.0.13</unboundid-ldap.version>
 
