--- a/integration-tests/pom.xml
+++ b/integration-tests/pom.xml
@@ -70,6 +70,7 @@
         <module>amazon-lambda-http-resteasy</module>
         <module>container-image</module>
         <module>optaplanner-jackson</module>
+        <module>optaplanner-jsonb</module>
         <module>kubernetes</module>
         <module>kubernetes-client</module>
         <module>tika</module>
