--- a/integration-tests/kubernetes/standard/src/test/resources/kubernetes-with-application.properties
+++ b/integration-tests/kubernetes/standard/src/test/resources/kubernetes-with-application.properties
@@ -5,3 +5,4 @@ quarkus.kubernetes.env-vars.my-env-var.value=SOMEVALUE
 quarkus.container-image.group=grp
 quarkus.container-image.registry=quay.io
 quarkus.kubernetes.expose=true
+quarkus.kubernetes.service-type=NodePort
