fix(#8091):ImagePullPolicy is correctly targeted

--- a/integration-tests/kubernetes/standard/src/test/resources/kubernetes-with-application.properties
+++ b/integration-tests/kubernetes/standard/src/test/resources/kubernetes-with-application.properties
@@ -6,3 +6,4 @@ quarkus.container-image.group=grp
 quarkus.container-image.registry=quay.io
 quarkus.kubernetes.expose=true
 quarkus.kubernetes.service-type=NodePort
+quarkus.kubernetes.image-pull-policy=IfNotPresent
