--- a/integration-tests/kubernetes/standard/src/test/resources/kubernetes-with-application.properties
+++ b/integration-tests/kubernetes/standard/src/test/resources/kubernetes-with-application.properties
@@ -2,6 +2,7 @@ quarkus.http.port=9090
 quarkus.kubernetes.name=test-it
 quarkus.kubernetes.labels.foo=bar
 quarkus.kubernetes.env-vars.my-env-var.value=SOMEVALUE
+quarkus.kubernetes.env-vars.my-name.field=metadata.name
 quarkus.container-image.group=grp
 quarkus.container-image.registry=quay.io
 quarkus.kubernetes.expose=true
