--- a/bom/runtime/pom.xml
+++ b/bom/runtime/pom.xml
@@ -2290,6 +2290,11 @@
                     </exclusion>
                 </exclusions>
             </dependency>
+	    <dependency>
+		<groupId>io.smallrye.reactive</groupId>
+		<artifactId>smallrye-axle-amqp-client</artifactId>
+                <version>${axle-client.version}</version>
+	    </dependency>
             <dependency>
                 <groupId>io.smallrye.reactive</groupId>
                 <artifactId>smallrye-axle-core</artifactId>
