Added ability for custom manifest sections entries to be added to manifest.mf

--- a/integration-tests/maven/pom.xml
+++ b/integration-tests/maven/pom.xml
@@ -42,6 +42,11 @@
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
         </dependency>
+        <dependency>
+            <groupId>io.quarkus</groupId>
+            <artifactId>quarkus-junit5-internal</artifactId>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 
     <build>
