--- a/integration-tests/pom.xml
+++ b/integration-tests/pom.xml
@@ -99,6 +99,7 @@
         <module>cache</module>
         <module>qute</module>
         <module>bootstrap-config</module>
+        <module>injectmock</module>
     </modules>
 
     <build>
