--- a/bom/deployment/pom.xml
+++ b/bom/deployment/pom.xml
@@ -593,6 +593,11 @@
             </dependency>
             <dependency>
                 <groupId>io.quarkus</groupId>
+                <artifactId>quarkus-tika-deployment</artifactId>
+                <version>${project.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>io.quarkus</groupId>
                 <artifactId>quarkus-jgit-deployment</artifactId>
                 <version>${project.version}</version>
             </dependency>
