Support OIDC client_secret_jwt

--- a/integration-tests/oidc-code-flow/src/main/resources/application.properties
+++ b/integration-tests/oidc-code-flow/src/main/resources/application.properties
@@ -15,7 +15,7 @@ quarkus.oidc.authentication.extra-params.max-age=60
 quarkus.http.cors=true
 quarkus.oidc.application-type=web-app
 
-# Tenant which does not need to restore a request path after redirect
+# Tenant which does not need to restore a request path after redirect, client_secret_post method
 quarkus.oidc.tenant-1.auth-server-url=${keycloak.url}/realms/quarkus
 quarkus.oidc.tenant-1.client-id=quarkus-app
 quarkus.oidc.tenant-1.credentials.client-secret.value=secret
@@ -24,6 +24,25 @@ quarkus.oidc.tenant-1.token.issuer=${keycloak.url}/realms/quarkus
 quarkus.oidc.tenant-1.authentication.redirect-path=/web-app/callback-after-redirect
 quarkus.oidc.tenant-1.authentication.restore-path-after-redirect=false
 quarkus.oidc.tenant-1.application-type=web-app
+
+# Tenant with client which needs to use client_secret_jwt method
+quarkus.oidc.tenant-jwt.auth-server-url=${keycloak.url}/realms/quarkus
+quarkus.oidc.tenant-jwt.client-id=quarkus-app-jwt
+quarkus.oidc.tenant-jwt.credentials.jwt.secret=AyM1SysPpbyDfgZld3umj1qzKObwVMkoqQ-EstJQLr_T-1qS0gZH75aKtMN3Yj0iPS4hcgUuTwjAzZr1Z9CAow
+quarkus.oidc.tenant-jwt.token.issuer=${keycloak.url}/realms/quarkus
+quarkus.oidc.tenant-jwt.authentication.redirect-path=/web-app/callback-jwt-after-redirect
+quarkus.oidc.tenant-jwt.authentication.restore-path-after-redirect=false
+quarkus.oidc.tenant-jwt.application-type=web-app
+
+# Tenant with client which needs to use client_secret_jwt but uses client_secret_post
+quarkus.oidc.tenant-jwt-not-used.auth-server-url=${keycloak.url}/realms/quarkus
+quarkus.oidc.tenant-jwt-not-used.client-id=quarkus-app-jwt
+quarkus.oidc.tenant-jwt-not-used.credentials.client-secret.value=AyM1SysPpbyDfgZld3umj1qzKObwVMkoqQ-EstJQLr_T-1qS0gZH75aKtMN3Yj0iPS4hcgUuTwjAzZr1Z9CAow
+quarkus.oidc.tenant-jwt-not-used.credentials.client-secret.method=post
+quarkus.oidc.tenant-jwt-not-used.token.issuer=${keycloak.url}/realms/quarkus
+quarkus.oidc.tenant-jwt-not-used.authentication.redirect-path=/web-app/callback-jwt-not-used-after-redirect
+quarkus.oidc.tenant-jwt-not-used.authentication.restore-path-after-redirect=false
+quarkus.oidc.tenant-jwt-not-used.application-type=web-app
 
 # Tenant which does not need to restore a request path after redirect with a different redirect path root
 quarkus.oidc.tenant-2.auth-server-url=${keycloak.url}/realms/quarkus
