--- a/.github/workflows/ci-actions.yml
+++ b/.github/workflows/ci-actions.yml
@@ -110,6 +110,7 @@ jobs:
           JAVA_OPTS: "-server -Xms64m -Xmx512m -XX:MetaspaceSize=96M -XX:MaxMetaspaceSize=256m -Djava.net.preferIPv4Stack=true -Djava.awt.headless=true -Dkeycloak.profile.feature.upload_scripts=enabled"
         ports:
           - 127.0.0.1:8180:8080
+          - 127.0.0.1:8543:8443
       postgres:
         image: postgres:10.5
         env:
@@ -459,7 +460,7 @@ jobs:
         if: matrix.neo4j
       - name: Keycloak Service
         run: |
-          docker run --rm --publish 8180:8080 --name build-keycloak \
+          docker run --rm --publish 8180:8080 --publish 8543:8443 --name build-keycloak \
             -e KEYCLOAK_USER=admin -e KEYCLOAK_PASSWORD=admin -e JAVA_OPTS=" \
               -server -Xms64m -Xmx512m -XX:MetaspaceSize=96M \
               -XX:MaxMetaspaceSize=256m -Djava.net.preferIPv4Stack=true -Djava.awt.headless=true \
