--- a/integration-tests/oidc/pom.xml
+++ b/integration-tests/oidc/pom.xml
@@ -16,6 +16,7 @@
 
     <properties>
         <keycloak.url>http://localhost:8180/auth</keycloak.url>
+        <keycloak.ssl.url>https://localhost:8543/auth</keycloak.ssl.url>
     </properties>
 
     <dependencies>
@@ -104,7 +105,7 @@
                         <configuration>
                             <skip>false</skip>
                             <systemPropertyVariables>
-                                <keycloak.url>${keycloak.url}</keycloak.url>
+                                <keycloak.url>${keycloak.ssl.url}</keycloak.url>
                             </systemPropertyVariables>
                         </configuration>
                     </plugin>
@@ -113,7 +114,7 @@
                         <configuration>
                             <skip>false</skip>
                             <systemPropertyVariables>
-                                <keycloak.url>${keycloak.url}</keycloak.url>
+                                <keycloak.url>${keycloak.ssl.url}</keycloak.url>
                             </systemPropertyVariables>
                         </configuration>
                     </plugin>
@@ -173,6 +174,7 @@
                                     <reportErrorsAtRuntime>false</reportErrorsAtRuntime>
                                     <cleanupServer>true</cleanupServer>
                                     <enableHttpUrlHandler>true</enableHttpUrlHandler>
+                                    <enableHttpsUrlHandler>true</enableHttpsUrlHandler>
                                     <enableServer>false</enableServer>
                                     <dumpProxies>false</dumpProxies>
                                     <graalvmHome>${graalvmHome}</graalvmHome>
@@ -194,6 +196,7 @@
             </activation>
             <properties>
                 <keycloak.url>http://localhost:8180/auth</keycloak.url>
+                <keycloak.ssl.url>https://localhost:8543/auth</keycloak.ssl.url>
             </properties>
             <build>
                 <plugins>
@@ -208,6 +211,7 @@
                                     <run>
                                         <ports>
                                             <port>8180:8080</port>
+                                            <port>8543:8443</port>
                                         </ports>
                                         <env>
                                             <KEYCLOAK_USER>admin</KEYCLOAK_USER>
