--- a/integration-tests/pom.xml
+++ b/integration-tests/pom.xml
@@ -103,6 +103,7 @@
         <module>qute</module>
         <module>bootstrap-config</module>
         <module>injectmock</module>
+        <module>reactive-messaging-amqp</module>
     </modules>
 
     <build>
