lambda creates zip and descriptors
aws lambda docs update

lambda review fixes

fix manage.sh

fix output

remove duplicates

--- a/bom/deployment/pom.xml
+++ b/bom/deployment/pom.xml
@@ -13,8 +13,20 @@
     <name>Quarkus - Deployment BOM</name>
     <packaging>pom</packaging>
 
+    <properties>
+        <commons-compress.version>1.20</commons-compress.version>
+    </properties>
+
     <dependencyManagement>
         <dependencies>
+
+            <!-- Third party deployment dependencies -->
+            <dependency>
+                <groupId>org.apache.commons</groupId>
+                <artifactId>commons-compress</artifactId>
+                <version>${commons-compress.version}</version>
+            </dependency>
+
 
             <!-- Quarkus runtime BOM -->
 
