Add keycloak admin client
Fixes #6350

--- a/extensions/pom.xml
+++ b/extensions/pom.xml
@@ -114,6 +114,7 @@
         <module>smallrye-jwt</module>
         <module>oidc</module>
         <module>keycloak-authorization</module>
+        <module>keycloak-admin-client</module>
 
         <!-- Infinispan -->
         <module>infinispan-client</module>
