Enabled replicas configuration for kubernetes and openshift to be generated
Signed-off-by: Cem Nura <cem.nura@gmail.com>

--- a/integration-tests/kubernetes/standard/src/test/resources/kubernetes-with-application.properties
+++ b/integration-tests/kubernetes/standard/src/test/resources/kubernetes-with-application.properties
@@ -9,3 +9,4 @@ quarkus.kubernetes.expose=true
 quarkus.kubernetes.host=example.com
 quarkus.kubernetes.service-type=NodePort
 quarkus.kubernetes.image-pull-policy=IfNotPresent
+quarkus.kubernetes.replicas=3
