--- a/integration-tests/kubernetes/standard/src/test/resources/openshift-with-application.properties
+++ b/integration-tests/kubernetes/standard/src/test/resources/openshift-with-application.properties
@@ -6,3 +6,4 @@ quarkus.openshift.env-vars.my-env-var.value=SOMEVALUE
 quarkus.openshift.group=grp
 quarkus.openshift.expose=true
 quarkus.s2i.registry=quay.io
+quarkus.openshift.replicas=3
