Add missing Keycloak extensions to deployment BOM

--- a/bom/deployment/pom.xml
+++ b/bom/deployment/pom.xml
@@ -200,6 +200,16 @@
             </dependency>
             <dependency>
                 <groupId>io.quarkus</groupId>
+                <artifactId>quarkus-keycloak-admin-client-deployment</artifactId>
+                <version>${project.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>io.quarkus</groupId>
+                <artifactId>quarkus-keycloak-authorization-deployment</artifactId>
+                <version>${project.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>io.quarkus</groupId>
                 <artifactId>quarkus-smallrye-reactive-type-converters-deployment</artifactId>
                 <version>${project.version}</version>
             </dependency>
