Improve keywords for Keycloak Admin Client extension

--- a/extensions/keycloak-admin-client/runtime/src/main/resources/META-INF/quarkus-extension.yaml
+++ b/extensions/keycloak-admin-client/runtime/src/main/resources/META-INF/quarkus-extension.yaml
@@ -2,10 +2,10 @@
 name: "Keycloak Admin Client"
 metadata:
   keywords:
-  - "oauth2"
-  - "openid-connect"
   - "keycloak"
-  - "authorization-services"
+  - "keycloak-admin-client"
+  - "admin"
+  - "openid-connect"
   categories:
     - "security"
   status: "stable"
