Move reading from ConfigMap and Secrets to a dedicated extension

--- a/bom/runtime/pom.xml
+++ b/bom/runtime/pom.xml
@@ -812,6 +812,11 @@
             </dependency>
             <dependency>
                 <groupId>io.quarkus</groupId>
+                <artifactId>quarkus-kubernetes-config</artifactId>
+                <version>${project.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>io.quarkus</groupId>
                 <artifactId>quarkus-optaplanner</artifactId>
                 <version>${project.version}</version>
             </dependency>
