fix how environment variables are created for OpenShift
The fix is twofold:

1. Instead of using `Paths` to construct paths, which are then
   OS-dependent, paths are always constructed as Unix paths.
   This is because containers are Linux.
2. The `KubernetesEnvBuildItem` constructor was called with
   wrong parameter order, which caused environment variables
   not being generated for well-known S2I images.

--- a/extensions/container-image/container-image-s2i/deployment/pom.xml
+++ b/extensions/container-image/container-image-s2i/deployment/pom.xml
@@ -53,6 +53,12 @@
                 </exclusion>
             </exclusions>
         </dependency>
+
+        <dependency>
+            <groupId>io.quarkus</groupId>
+            <artifactId>quarkus-junit5-internal</artifactId>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 
     <build>
