--- a/bom/runtime/pom.xml
+++ b/bom/runtime/pom.xml
@@ -862,6 +862,11 @@
             </dependency>
             <dependency>
                 <groupId>io.quarkus</groupId>
+                <artifactId>quarkus-elytron-security-ldap</artifactId>
+                <version>${project.version}</version>
+            </dependency>
+            <dependency>
+                <groupId>io.quarkus</groupId>
                 <artifactId>quarkus-vault</artifactId>
                 <version>${project.version}</version>
             </dependency>
@@ -2080,6 +2085,11 @@
             <dependency>
               <groupId>org.wildfly.security</groupId>
               <artifactId>wildfly-elytron-realm-jdbc</artifactId>
+              <version>${wildfly-elytron.version}</version>
+            </dependency>
+            <dependency>
+              <groupId>org.wildfly.security</groupId>
+              <artifactId>wildfly-elytron-realm-ldap</artifactId>
               <version>${wildfly-elytron.version}</version>
             </dependency>
             <dependency>
