javax.imageio is now supported in GraalVM 19.3+

--- a/integration-tests/main/pom.xml
+++ b/integration-tests/main/pom.xml
@@ -257,6 +257,7 @@
                                     <cleanupServer>true</cleanupServer>
                                     <enableHttpUrlHandler>true</enableHttpUrlHandler>
                                     <graalvmHome>${graalvmHome}</graalvmHome>
+                                    <additionalBuildArgs></additionalBuildArgs>
                                 </configuration>
                             </execution>
                         </executions>
